# sedgewick-dsa-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/ch02/: gcd.c  gcd.h
src/ch03/: CMakeLists.txt  fwd_linked_list.t.c  linked_list.c  linked_list.h  linked_list.t.c
src/ch04/: btree.cpp  btree.h  btree.py
